--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\davide\\.netbeans\\7.0\\build.properties
+user.properties.file=/home/daviden/.netbeans/7.0/build.properties
