--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,17 +25,35 @@ dist.dir=dist
 dist.jar=${dist.dir}/GeneticMusic.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.gnujaxp.jar=jfreechart-1.0.13\\lib\\gnujaxp.jar
+file.reference.iText-2.1.5.jar=jfreechart-1.0.13\\lib\\iText-2.1.5.jar
+file.reference.jcommon-1.0.16.jar=jfreechart-1.0.13\\lib\\jcommon-1.0.16.jar
+file.reference.jfreechart-1.0.13-experimental.jar=jfreechart-1.0.13\\lib\\jfreechart-1.0.13-experimental.jar
+file.reference.jfreechart-1.0.13-swt.jar=jfreechart-1.0.13\\lib\\jfreechart-1.0.13-swt.jar
+file.reference.jfreechart-1.0.13.jar=jfreechart-1.0.13\\lib\\jfreechart-1.0.13.jar
 file.reference.jgap-examples.jar=jgap_current/jgap-examples.jar
 file.reference.jgap-tests.jar=jgap_current/jgap-tests.jar
 file.reference.jgap.jar=jgap_current/jgap.jar
 file.reference.jMusic1.6.02.jar=jMusic1.6.02.jar
+file.reference.junit.jar=jfreechart-1.0.13\\lib\\junit.jar
+file.reference.servlet.jar=jfreechart-1.0.13\\lib\\servlet.jar
+file.reference.swtgraphics2d.jar=jfreechart-1.0.13\\lib\\swtgraphics2d.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jgap-examples.jar}:\
     ${file.reference.jgap-tests.jar}:\
     ${file.reference.jgap.jar}:\
-    ${file.reference.jMusic1.6.02.jar}
+    ${file.reference.jMusic1.6.02.jar}:\
+    ${file.reference.gnujaxp.jar}:\
+    ${file.reference.iText-2.1.5.jar}:\
+    ${file.reference.jcommon-1.0.16.jar}:\
+    ${file.reference.jfreechart-1.0.13-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.13-swt.jar}:\
+    ${file.reference.jfreechart-1.0.13.jar}:\
+    ${file.reference.junit.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.swtgraphics2d.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
