--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=GeneticMusic
+application.vendor=davide
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,6 +24,7 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/GeneticMusic.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.gnujaxp.jar=jfreechart-1.0.13\\lib\\gnujaxp.jar
 file.reference.iText-2.1.5.jar=jfreechart-1.0.13\\lib\\iText-2.1.5.jar
@@ -77,7 +78,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=geneticmusic.GeneticMusic
+main.class=geneticmusic.GeneticMusicChorale
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
